--- a/05-07.html
+++ b/05-07.html
@@ -18,7 +18,7 @@
   &nbsp; &nbsp; &nbsp; &nbsp;
  <center>
 <h3 id="home"><u>HOME</u></h3>
- <img src="./Images/demon slayer.jpg"width="300"
+ <img src="./Images/demon slayer.jpg" alt="" width="300"
 </center>
 
 <h3 id="about"><u>ABOUT</u></h3>
@@ -35,16 +35,16 @@ Aided by Tamayo's poison, the Corps unleash a desperate battle of attrition as t
 Muzan's death has effectively vanquished all demons under his control while Yushiro goes to live as a painter. Tanjiro and Nezuko return to their home, accompanied by Zenitsu and Inosuke. Tanjiro and Inosuke marry Kanao and fellow Demon Slayer Aoi Kanzaki, respectively, while Zenitsu marries Nezuko. In a modern-day epilogue, the descendants and reincarnations of the Corps members enjoy a peaceful life free of demons.</p>
 <center>
 <h3 id="portfolio"><u>PORTFOLIO</u></h3>
-<img src="./Images/tanjiro.jpeg" width="200">
+<img src="./Images/tanjiro.jpeg" alt="" width="200">
 <br>
 <br>
-<img src="./Images/zenii1.jpg" width="200">
+<img src="./Images/zenii1.jpg" alt="" width="200">
 <br>
 <br>
-<img src="./Images/nezuko.jpeg" width="200">
+<img src="./Images/nezuko.jpeg"alt="" width="200">
 <br>
 <br>
-<img src="./Images/hashhh.jpg"width="300">
+<img src="./Images/hashhh.jpg" alt="" width="300">
 </center>
 <center>
   <h3 id="contact"><u> CONTACT </u></h3>
